--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
               <li class="mr-3">
                 <img src="./img/testimonials/person4.jpeg" class="rounded-circle" alt="" />
               </li>
-              <li>Sasha WIlliams</li>
+              <li>Sunita</li>
             </ul>
           </div>
         </div>
