--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
               <span>&times;</span>
             </button>
           </div>
-          <img src="./img/Hochzeit-Toskana-Heiraten-in-Italien-94-von-104-700x467.jpg" alt="" />
+          <img src="./img/1.jpg" alt="" />
         </div>
       </div>
     </div>
@@ -419,7 +419,7 @@
               <span>&times;</span>
             </button>
           </div>
-          <img src="./img/Wedding-Remise-Bonn-Sascha-Kraemer-Photogrpaher-1-700x466.jpg" alt="" />
+          <img src="./img/2.jpg" alt="" />
         </div>
       </div>
     </div>
@@ -432,7 +432,7 @@
               <span>&times;</span>
             </button>
           </div>
-          <img src="./img/Wedding-Remise-Bonn-Sascha-Kraemer-Photogrpaher-1-700x466.jpg" alt="" />
+          <img src="./img/3.jpg" alt="" />
         </div>
       </div>
     </div>
@@ -445,7 +445,7 @@
               <span>&times;</span>
             </button>
           </div>
-          <img src="./img/VIS-Croatia-Wedding-800x533.jpg" alt="" />
+          <img src="./img/4.jpg" alt="" />
         </div>
       </div>
     </div>
